--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
