--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^10.0.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.2"
